--- a/FE/src/conpoments/Register.css
+++ b/FE/src/conpoments/Register.css
@@ -79,8 +79,8 @@
   .button {
     padding: 0.75rem;
     background-color: white;
-    color: #007bff;
-    border: 1px solid #007bff;
+    color: #008f72;
+    border: 1px solid #008f72;
     border-radius: 25px;
     cursor: pointer;
     font-size: 1rem;
@@ -89,7 +89,7 @@
   }
   
   .button:hover {
-    background-color: #007bff;
+    background-color: #008f72;
     color: white;
   }
   
@@ -99,7 +99,7 @@
   }
   
   .link {
-    color: #007bff;
+    color: #008f72;
     cursor: pointer;
     transition: color 0.3s;
   }
