--- a/Client/src/styles/screens/ParticipationComponent.css
+++ b/Client/src/styles/screens/ParticipationComponent.css
@@ -10,10 +10,18 @@
   .participation-content {
     display: flex;
     align-items: center;
+    width: 100%;
   }
   
   .left-section {
-    padding: 20px;
+    box-sizing: border-box;
+    padding: 20px 0 20px 100px;
+    text-align: left;
+  }
+
+  .left-section h4 {
+    margin-bottom: 100px;
+    font-weight: bold;
   }
   
   .highlight {
@@ -22,11 +30,17 @@
   
   .feature-list {
     margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
   }
   
   .feature-item {
     display: flex;
-    align-items: flex-start;
+    flex-direction: column;
+    width: 300px;
+    align-items: left;
+    text-align: left;
     margin-bottom: 20px;
   }
   
@@ -42,6 +56,7 @@
   
   .image-container {
     position: relative;
+    
   }
   
   .participation-image {
