--- a/Client/src/styles/screens/CoachComponent.css
+++ b/Client/src/styles/screens/CoachComponent.css
@@ -3,6 +3,7 @@
     width: 18rem;
     margin-bottom: 2rem;
     border-radius: 10px;
+    padding: 0%;
   }
   
   .card-image {
@@ -31,7 +32,7 @@
   }
   
   .contact-buttons .contact-btn {
-    width: 100%;
+    width: 80%;
   }
   
   .contact-buttons {
