--- a/Client/src/styles/screens/CourtDetailComponent.css
+++ b/Client/src/styles/screens/CourtDetailComponent.css
@@ -8,7 +8,7 @@
   .court-detail-card {
     border-radius: 12px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    padding: 20px;
+    padding: 0px;
   }
   
   .court-image {
@@ -53,7 +53,7 @@
   }
   
   .price-text {
-    color: #28a745;
+    color: #059A8F;
     font-weight: bold;
     font-size: 1.25rem;
   }
@@ -63,7 +63,7 @@
   }
   
   .register-btn {
-    width: 100%;
+    width: 90%;
     margin-top: 15px;
     background-color: #007bff;
     border-color: #007bff;
