--- a/Client/src/styles/screens/ParticipationComponent.css
+++ b/Client/src/styles/screens/ParticipationComponent.css
@@ -13,7 +13,9 @@
   }
   
   .left-section {
-    padding: 20px;
+    padding: 0px;
+    margin: 0%;
+    border: 0%;
   }
   
   .highlight {
@@ -31,13 +33,15 @@
   }
   
   .icon {
-    font-size: 24px;
+    font-size: 35px;
     color: #00bfa5;
     margin-right: 15px;
   }
   
   .right-section {
-    position: relative;
+    padding: 0px;
+    margin: 0%;
+    border: 0%;
   }
   
   .image-container {
@@ -45,6 +49,8 @@
   }
   
   .participation-image {
+    height: 80%;
+    width: 80%;
     border-radius: 10px;
   }
   
@@ -53,9 +59,18 @@
     bottom: 20px;
     left: 20px;
     color: white;
+    margin: 10%;
   }
   
   .participation-button {
+    margin-top: 10px;
+    margin-right: 10px;
+  }
+
+  .white-button {
+    background-color: transparent;
+    color: rgb(255, 255, 255);
+    border: 1px solid rgb(255, 255, 255); /* Tạo viền đen hoặc màu bạn muốn */
     margin-top: 10px;
     margin-right: 10px;
   }
