--- a/Client/src/styles/screens/Footer.css
+++ b/Client/src/styles/screens/Footer.css
@@ -6,6 +6,11 @@
     padding: 40px 20px;
     font-family: Arial, sans-serif;
   }
+
+  .head-footer {
+    display: flex;
+    justify-content: space-around;
+  }
   
   .container {
     display: flex;
