--- a/Client/src/styles/screens/Header.css
+++ b/Client/src/styles/screens/Header.css
@@ -2,14 +2,18 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0.5rem 1rem;
+    padding: 1rem;
     background-color: white;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
   }
-  
+
   .logo {
-    font-size: 1.5rem;
-    font-weight: bold;
+    margin-left: 60px;
+  }
+  
+  .logo img {
+    width: 80px;
+    height: 80px;
   }
   
   .nav-links {
@@ -18,7 +22,8 @@
   }
   
   .nav-links li {
-    margin: 0 1rem;
+    margin: 1rem;
+    font-weight: bold;
   }
   
   .nav-links a {
@@ -59,6 +64,13 @@
     display: flex;
     align-items: center;
     margin-left: 0.5rem;
+  }
+
+  .user-info img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 0.5rem;
   }
   
   .profile-img {
