--- a/Client/src/styles/screens/HomeComponent.css
+++ b/Client/src/styles/screens/HomeComponent.css
@@ -1,8 +1,11 @@
 .home-component {
     display: flex;
+    color: #f0f0f0;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 500px;
+    height: 100vh;
     background-color: #f0f0f0;
+    background-image: url("../../../public/assets/images/slide.png");
+    background-position: center;
 }
