--- a/Client/src/styles/screens/DetailedFilterComponent.css
+++ b/Client/src/styles/screens/DetailedFilterComponent.css
@@ -1,5 +1,7 @@
 .detailed-filter {
     margin-top: 20px;
+    margin-left: 30px;
+    margin-right: 30px;
   }
   
   .detailed-filter .form-group {
