--- a/Client/src/styles/screens/CoachComponent.css
+++ b/Client/src/styles/screens/CoachComponent.css
@@ -1,33 +1,49 @@
-.coach-list {
-  background-color: #f0f0f0;
-}
-
-.coach-list h2 {
-  padding-top: 50px;
+.court-card:hover {
+  transform: scale(1.05);
 }
 
 .coach-list-row {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(4, 0fr);
   justify-items: center;
   align-items: center;
   padding: 10px;
-  gap: 20px;
+  gap: 10px;
 }
 
 .coach-card {
   position: relative;
-  width: 85%;
+  overflow: hidden;
+  width: 16rem;
+  border-radius: 12px;
   margin-bottom: 2rem;
-  border-radius: 10px;
-  box-sizing: border-box;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease;
+  cursor: pointer;
+  background-color: #F0F0F0;
+  padding: 0;
+  margin: 0;
 }
 
 .card-image {
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-  height: 200px;
+  height: 170px;
+  width: 100%;
   object-fit: cover;
+}
+
+.top-left-badge {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  background-color: rgba(255, 255, 255, 0.9);
+  padding: 5px 10px;
+  border-radius: 20px;
+  font-size: 14px;
+  font-weight: 600;
+  color: #000;
+  border: 1px solid #000000;
 }
 
 .zalo-btn {
@@ -40,18 +56,37 @@
   border: none;
   color: #007bff;
   padding: 5px 10px;
-  border-radius: 20px;
+  border-radius: 30px;
 }
 
 .price-text {
   color: green;
   font-weight: bold;
+  padding: 0;
 }
 
 .contact-buttons .contact-btn {
-  width: 100%;
+  width: 95%;
+  border-radius: 30px;
 }
 
 .contact-buttons {
   margin-top: 10px;
+  margin-right: 0px;
 }
+
+.card-body {
+  margin: 15px;
+  padding: 0px;
+}
+
+.card-body .card-title{
+  text-align: left;
+  font-weight: bold;
+  margin: 0px;
+}
+
+.card-body .card-text{
+  margin: 0;
+}
+
