--- a/Client/src/styles/screens/CourtDetailComponent.css
+++ b/Client/src/styles/screens/CourtDetailComponent.css
@@ -2,13 +2,19 @@
 
 .court-detail-container {
     padding: 20px;
-    background-color: #f8f9fa;
+    background-color: #F0F0F0;
   }
   
   .court-detail-card {
     border-radius: 12px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    border: none;
     padding: 20px;
+    background-color: #F0F0F0;
+  }
+
+  img {
+    border-radius: 12px;
+    object-fit: cover;
   }
   
   .court-image {
@@ -20,58 +26,88 @@
   .image-gallery {
     display: flex;
     gap: 10px;
-    margin-top: 10px;
+    margin-top: 15px;
   }
   
   .gallery-thumbnail {
-    width: 75px;
+    width: 80px;
     height: 50px;
-    border-radius: 4px;
+    border-radius: 8px;
     cursor: pointer;
   }
   
   .view-more-btn {
+    margin-left: 10px;
+    font-size: 14px;
     align-self: center;
   }
   
   .court-details {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     padding-left: 20px;
   }
   
   .badge-container {
-    margin-bottom: 10px;
+    display: flex;
+    gap: 10px;
+    margin-bottom: 15px;
   }
   
   .court-badge {
-    margin-right: 10px;
-    border-radius: 100px;
+    font-size: 14px;
+    border-radius: 30px;
+    padding: 5px 10px;
+    border: 1px solid #2D70A1;
+    color: #2D70A1;
   }
   
+  .court-details h4 {
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 20px;
+  }
+
   .icon {
     margin-right: 8px;
+    color: #999;
     vertical-align: middle;
   }
   
   .price-text {
-    color: #28a745;
+    color: #059A8F;
     font-weight: bold;
-    font-size: 1.25rem;
+    font-size: 20px;
   }
   
+  .slot-selection {
+    display: flex;
+    gap: 10px;
+    margin: 20px 0;
+  }
+
   .slot-selection button {
-    margin: 5px;
+    border-radius: 20px;
+    padding: 5px 20px;
+    font-size: 14px;
   }
   
   .register-btn {
     width: 100%;
     margin-top: 15px;
-    background-color: #007bff;
-    border-color: #007bff;
+    padding: 10px 0;
+    background-color: #2D70A1;
+    border-color: #2D70A1;
     border-radius: 100px;
   }
   
-  .register-btn:hover {
-    background-color: #0056b3;
-    border-color: #0056b3;
+  p {
+    font-size: 14px;
+    color: #555;
+  }
+
+  .card-text {
+    text-align: left;
   }
   
