--- a/Client/src/styles/screens/NewListComponent.css
+++ b/Client/src/styles/screens/NewListComponent.css
@@ -10,7 +10,7 @@
   }
   
   .news-card {
-    width: 300px;
+    width: 280px;
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -24,11 +24,13 @@
   
   .news-image {
     width: 100%;
+    height: 160px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
   }
   
   .news-info {
     padding: 15px;
+    text-align: left;
   }
   
