--- a/Client/src/styles/screens/ParticipationComponent.css
+++ b/Client/src/styles/screens/ParticipationComponent.css
@@ -1,6 +1,6 @@
 .participation-section {
     padding: 20px;
-    background-color: #f8f9fa;
+    background-color: #F0F0F0;
   }
   
   .text-center {
@@ -68,10 +68,19 @@
     bottom: 20px;
     left: 20px;
     color: white;
+    /* font-size: 24px;
+    font-weight: semibold; */
   }
   
   .participation-button {
     margin-top: 10px;
     margin-right: 10px;
+    width: 60%;
+    color: white;
+    border: 1px solid white;
+    background-color: #064D7E;
+    font-size: larger;
   }
+
+
   
