--- a/Client/src/styles/screens/Footer.css
+++ b/Client/src/styles/screens/Footer.css
@@ -1,7 +1,8 @@
 /* src/Footer.css */
 
 .footer {
-    background: linear-gradient(90deg, #005bea, #00c6fb);
+    /* background: linear-gradient(90deg, #05999e, #cbe7e3); */
+    background-color: #fff8dc;
     color: white;
     padding: 40px 20px;
     font-family: Arial, sans-serif;
