--- a/Client/src/styles/screens/Header.css
+++ b/Client/src/styles/screens/Header.css
@@ -46,18 +46,18 @@
   }
   
   .login-button {
-    background-color: #0056b3;
+    background-color: #064D7E;
     color: white;
   }
   
   .register-button {
     background-color: white;
-    border: 1px solid #0056b3;
-    color: #0056b3;
+    border: 1px solid #064D7E;
+    color: #064D7E;
   }
   
   .post-button {
-    background-color: #0056b3;
+    background-color: #064D7E;
     color: white;
   }
   
