--- a/Client/src/styles/screens/CoachComponent.css
+++ b/Client/src/styles/screens/CoachComponent.css
@@ -2,14 +2,14 @@
   transform: scale(1.05);
 }
 
-.coach-list-row {
+/* .coach-list-row {
   display: grid;
   grid-template-columns: repeat(4, 0fr);
   justify-items: center;
   align-items: center;
   padding: 10px;
   gap: 10px;
-}
+} */
 
 .coach-card {
   position: relative;
