--- a/Client/src/styles/screens/CourtListComponent.css
+++ b/Client/src/styles/screens/CourtListComponent.css
@@ -7,4 +7,13 @@
     text-align: center;
     margin-bottom: 20px;
   }
+
+  #body-court {
+    margin: 0 277px;
+  }
   
+  .pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+  }
