--- a/Client/src/styles/screens/Header.css
+++ b/Client/src/styles/screens/Header.css
@@ -194,3 +194,9 @@
     display: block;
   }
 }
+
+@media (min-width: 431px) {
+  .menu-icon {
+    display: none; /* Ẩn menu icon cho màn hình lớn hơn 430px */
+  }
+}
