--- a/Client/src/styles/screens/Footer.css
+++ b/Client/src/styles/screens/Footer.css
@@ -3,14 +3,16 @@
 .footer {
   background: linear-gradient(90deg, #2d70a1 0%, #059a8f 100%);
   color: #ffffff;
-  padding: 40px 20px;
+  padding: 100px 20px 40px 20px;
   font-family: Arial, sans-serif;
   text-align: left;
 }
 
 .footer-container {
   margin: 0 200px;
-
+  display: flex;
+  justify-content: space-evenly;
+  gap: 100px;
 }
 
 .footer p, .footer h4 {
@@ -32,13 +34,9 @@
 
 .logo-footer {
   flex: 1;
-  max-width: 250px;
+  max-width: 270px;
   margin: 0 0 40px 0;
-}
-
-.logo-footer h1 {
-  margin: 0;
-  font-size: 24px;
+  text-align: center;
 }
 
 .logo-footer p {
