--- a/Client/src/styles/screens/Header.css
+++ b/Client/src/styles/screens/Header.css
@@ -213,3 +213,30 @@
     display: block;
   }
 }
+
+.notification-dropdown {
+  position: absolute;
+  right: 0;
+  top: 80px; /* Điều chỉnh vị trí hiển thị */
+  right: 300px;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+}
+
+.notification-dropdown ul {
+  list-style: none;
+  padding: 10px;
+  margin: 0;
+}
+
+.notification-dropdown li {
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+.notification-dropdown li:hover {
+  background-color: #f0f0f0;
+}
