--- a/Client/src/styles/screens/CourtDetailComponent.css
+++ b/Client/src/styles/screens/CourtDetailComponent.css
@@ -48,7 +48,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding-left: 20px;
+    padding: 0;
   }
   
   .badge-container {
@@ -116,3 +116,8 @@
   .text-location {
     
   }
+
+  
+@media (max-width: 430px) {
+
+}
