--- a/Client/src/styles/screens/CoachComponent.css
+++ b/Client/src/styles/screens/CoachComponent.css
@@ -59,10 +59,11 @@
   border-radius: 30px;
 }
 
-.price-text {
-  color: green;
-  font-weight: bold;
-  padding: 0;
+#price-text {
+  color: #059A8F;
+  font-weight: 540;
+  font-size: 19px;
+  padding-top: 10px;
 }
 
 .contact-buttons .contact-btn {
