--- a/Client/src/styles/screens/CourtRegistrationList.css
+++ b/Client/src/styles/screens/CourtRegistrationList.css
@@ -24,23 +24,23 @@
   border-radius: 8px;
 }
 
-.court-details {
+#court-details {
   flex-grow: 1;
   padding-left: 15px;
 }
 
-.court-details h5 {
+#court-details h5 {
   font-size: 16px;
   font-weight: bold;
   margin: 5px 0;
 }
 
-.court-details h6 {
+#court-details h6 {
   font-size: 14px;
   margin-bottom: 5px;
 }
 
-.court-details p {
+#court-details p {
   margin: 3px 0;
 }
 
