--- a/Client/src/styles/screens/CourtDetailComponent.css
+++ b/Client/src/styles/screens/CourtDetailComponent.css
@@ -27,7 +27,7 @@
 #court-detail-card .large-image {
   border-radius: 12px;
   width: 100%;
-  height: 50%;
+  height: 393px;
   object-fit: cover; 
 }
 
