--- a/Client/src/styles/screens/CourtDetailComponent.css
+++ b/Client/src/styles/screens/CourtDetailComponent.css
@@ -28,7 +28,7 @@
   border-radius: 12px;
   width: 100%;
   height: 393px;
-  object-fit: cover; 
+  object-fit: contain; 
 }
 
 #court-detail-card .small-image {
