--- a/Client/src/styles/screens/CoachComponent.css
+++ b/Client/src/styles/screens/CoachComponent.css
@@ -30,7 +30,7 @@
   border-top-right-radius: 10px;
   height: 170px;
   width: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .top-left-badge {
